--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dannyfranca/radarjs",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Event Manager, with namespaces, emitting, bubbling and broadcasting, made with RxJS Subjects and inspired by jQuery event API.",
   "license": "MIT",
   "author": {
@@ -87,6 +87,8 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "@types/micromatch": "^4.0.1",
+    "micromatch": "^4.0.2",
     "rxjs": "^6.5.4"
   }
 }
