--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dannyfranca/radarjs",
   "version": "0.3.0",
-  "description": "Event Manager, with namespaces, emitting, bubbling and broadcasting, made with RxJS Subjects and inspired by jQuery event API.",
+  "description": "Modern and Robust Event Emitter, with tagging, emitting and broadcasting. Internally uses Promises and RxJS Subjects.",
   "license": "MIT",
   "author": {
     "name": "Danny França",
@@ -44,15 +44,14 @@
     "subscribe",
     "unsubscribe",
     "trigger",
-    "next",
     "emit",
     "broadcast",
     "bubble",
     "handler",
     "manager",
-    "jquery",
     "rxjs",
     "subject",
+    "subscription",
     "observer"
   ],
   "files": [
